# OSqlite3

./: .gitignore  LICENSE  README.md  dwda.sqlite  pyproject.toml  test.py
src/: __init__.py  database.py  model.py  typing.py  utils.py
test/: test.py
