[project]
name = "OSqlite"
version = "0.0.1"
authors = [
  { name="BigOrangeQWQ", email="2284086963@qq.com" },
]
description = "A simple handle sqlite3 package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
